security的File代码